Add react and stuff

--- a/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/base.html
+++ b/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/base.html
@@ -7,6 +7,10 @@
   <body>
     {% block content %}
     {% endblock content %}
+
+    <!-- React app enters here: -->
+    <div id="app"></div>
+    
   </body>
 </html>
 {% endraw %}
