--- a/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/base.html
+++ b/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/base.html
@@ -10,7 +10,8 @@
 
     <!-- React app enters here: -->
     <div id="app"></div>
-    
+
   </body>
+  <script src="/static/js/project.min.js"></script>
 </html>
 {% endraw %}
