--- a/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/base.html
+++ b/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/base.html
@@ -3,6 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{% endraw %}{{cookiecutter.project_name}}{% raw %}</title>
+    <link href="/static/css/main.css" rel="stylesheet">
   </head>
   <body>
     {% block content %}
